lessie.output
State 54 conflicts: 2 shift/reduce
State 75 conflicts: 1 shift/reduce
State 118 conflicts: 2 shift/reduce
State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: CLASS_ ID_ $@1 CURLY_OPEN_ declarationList CURLY_CLOSE_

    3 declarationList: declaration
    4                | declarationList declaration

    5 declaration: memberDeclaration
    6            | functionDeclaration

    7 memberDeclaration: VAR_ ID_ SEMICOLON_

    8 functionDeclaration: functionHead block

    9 $@2: /* empty */

   10 functionHead: DEF_ ID_ $@2 PAR_OPEN_ formalParameters PAR_CLOSE_

   11 formalParameters: /* empty */
   12                 | formalParameterList

   13 formalParameterList: ID_

   14 $@3: /* empty */

   15 formalParameterList: ID_ COMMA $@3 formalParameterList

   16 block: CURLY_OPEN_ localVariableDeclaration instructionList CURLY_CLOSE_

   17 localVariableDeclaration: /* empty */
   18                         | localVariableDeclaration variableDeclaration

   19 variableDeclaration: VAR_ ID_ SEMICOLON_
   20                    | VAR_ ID_ SQUARE_OPEN_ CTI_ SQUARE_CLOSE_ SEMICOLON_
   21                    | VAR_ ID_ ASSIGN expression SEMICOLON_

   22 instructionList: /* empty */
   23                | instructionList instruction

   24 instruction: CURLY_OPEN_ localVariableDeclaration instructionList CURLY_CLOSE_
   25            | expressionInstruction
   26            | assignExpression
   27            | selectionInstruction
   28            | iterationInstruction
   29            | returnInstruction

   30 expressionInstruction: SEMICOLON_
   31                      | expression SEMICOLON_

   32 @4: /* empty */

   33 @5: /* empty */

   34 selectionInstruction: IF PAR_OPEN_ expression PAR_CLOSE_ @4 instruction @5 ELSE instruction

   35 @6: /* empty */

   36 @7: /* empty */

   37 @8: /* empty */

   38 $@9: /* empty */

   39 iterationInstruction: FOR PAR_OPEN_ optionalExpression SEMICOLON_ @6 expression @7 SEMICOLON_ @8 optionalExpression $@9 PAR_CLOSE_ instruction

   40 optionalExpression: /* empty */
   41                   | expression

   42 returnInstruction: RETURN expression SEMICOLON_
   43                  | RETURN SEMICOLON_

   44 assignExpression: ID_ ASSIGN expression
   45                 | ID_ POINT_ ID_ ASSIGN expression
   46                 | ID_ SQUARE_OPEN_ expression SQUARE_CLOSE_ ASSIGN expression

   47 expression: equalityExpression

   48 equalityExpression: relationalExpression
   49                   | equalityExpression equalityOperator relationalExpression

   50 relationalExpression: additiveExpression
   51                     | relationalExpression relationalOperator additiveExpression

   52 additiveExpression: multiplicativeExpression
   53                   | additiveExpression additiveOperator multiplicativeExpression

   54 multiplicativeExpression: unaryExpression
   55                         | multiplicativeExpression multiplicativeOperator unaryExpression

   56 unaryExpression: suffixExpression
   57                | unaryOperator unaryExpression

   58 suffixExpression: memberAccess incrementOperator
   59                 | PAR_OPEN_ expression PAR_CLOSE_

   60 $@10: /* empty */

   61 suffixExpression: NEW_ ID_ $@10 PAR_OPEN_ actualParameters PAR_CLOSE_
   62                 | functionCall
   63                 | memberAccess
   64                 | ID_ SQUARE_OPEN_ expression SQUARE_CLOSE_
   65                 | CTI_
   66                 | STRING_LITERAL_
   67                 | REAL_

   68 functionCall: ID_ POINT_ ID_ PAR_OPEN_ actualParameters PAR_CLOSE_
   69             | ID_ COLON_ ID_ PAR_OPEN_ actualParameters PAR_CLOSE_
   70             | ID_ PAR_OPEN_ actualParameters PAR_CLOSE_

   71 memberAccess: ID_ POINT_ ID_
   72             | ID_

   73 actualParameters: /* empty */
   74                 | actualParameterList

   75 actualParameterList: expression
   76                    | expression COMMA actualParameterList

   77 equalityOperator: EQUAL
   78                 | NOT_EQUAL

   79 relationalOperator: GREATER
   80                   | LESS
   81                   | GREATER_EQUAL
   82                   | LESS_EQUAL

   83 additiveOperator: PLUS
   84                 | MINUS

   85 multiplicativeOperator: MULT
   86                       | DIV_

   87 incrementOperator: INC_
   88                  | DEC_

   89 unaryOperator: PLUS
   90              | MINUS


Terminals, with rules where they appear

$end (0) 0
error (256)
REAL_ (258) 67
ID_ (259) 2 7 10 13 15 19 20 21 44 45 46 61 64 68 69 70 71 72
CTI_ (260) 20 65
STRING_LITERAL_ (261) 66
CLASS_ (262) 2
DEF_ (263) 10
COLON_ (264) 69
NEW_ (265) 61
VAR_ (266) 7 19 20 21
SEMICOLON_ (267) 7 19 20 21 30 31 39 42 43
SQUARE_OPEN_ (268) 20 46 64
SQUARE_CLOSE_ (269) 20 46 64
CURLY_OPEN_ (270) 2 16 24
CURLY_CLOSE_ (271) 2 16 24
ASSIGN (272) 21 44 45 46
EQUAL (273) 77
NOT_EQUAL (274) 78
GREATER (275) 79
LESS (276) 80
GREATER_EQUAL (277) 81
LESS_EQUAL (278) 82
PLUS (279) 83 89
MINUS (280) 84 90
MULT (281) 85
DIV_ (282) 86
FOR (283) 39
INC_ (284) 87
DEC_ (285) 88
IF (286) 34
ELSE (287) 34
RETURN (288) 42 43
POINT_ (289) 45 68 71
COMMA (290) 15 76
PAR_CLOSE_ (291) 10 34 39 59 61 68 69 70
PAR_OPEN_ (292) 10 34 39 59 61 68 69 70


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 2, on right: 0
$@1 (40)
    on left: 1, on right: 2
declarationList (41)
    on left: 3 4, on right: 2 4
declaration (42)
    on left: 5 6, on right: 3 4
memberDeclaration (43)
    on left: 7, on right: 5
functionDeclaration (44)
    on left: 8, on right: 6
functionHead (45)
    on left: 10, on right: 8
$@2 (46)
    on left: 9, on right: 10
formalParameters (47)
    on left: 11 12, on right: 10
formalParameterList (48)
    on left: 13 15, on right: 12 15
$@3 (49)
    on left: 14, on right: 15
block (50)
    on left: 16, on right: 8
localVariableDeclaration (51)
    on left: 17 18, on right: 16 18 24
variableDeclaration (52)
    on left: 19 20 21, on right: 18
instructionList (53)
    on left: 22 23, on right: 16 23 24
instruction (54)
    on left: 24 25 26 27 28 29, on right: 23 34 39
expressionInstruction (55)
    on left: 30 31, on right: 25
selectionInstruction (56)
    on left: 34, on right: 27
@4 (57)
    on left: 32, on right: 34
@5 (58)
    on left: 33, on right: 34
iterationInstruction (59)
    on left: 39, on right: 28
@6 (60)
    on left: 35, on right: 39
@7 (61)
    on left: 36, on right: 39
@8 (62)
    on left: 37, on right: 39
$@9 (63)
    on left: 38, on right: 39
optionalExpression (64)
    on left: 40 41, on right: 39
returnInstruction (65)
    on left: 42 43, on right: 29
assignExpression (66)
    on left: 44 45 46, on right: 26
expression (67)
    on left: 47, on right: 21 31 34 39 41 42 44 45 46 59 64 75 76
equalityExpression (68)
    on left: 48 49, on right: 47 49
relationalExpression (69)
    on left: 50 51, on right: 48 49 51
additiveExpression (70)
    on left: 52 53, on right: 50 51 53
multiplicativeExpression (71)
    on left: 54 55, on right: 52 53 55
unaryExpression (72)
    on left: 56 57, on right: 54 55 57
suffixExpression (73)
    on left: 58 59 61 62 63 64 65 66 67, on right: 56
$@10 (74)
    on left: 60, on right: 61
functionCall (75)
    on left: 68 69 70, on right: 62
memberAccess (76)
    on left: 71 72, on right: 58 63
actualParameters (77)
    on left: 73 74, on right: 61 68 69 70
actualParameterList (78)
    on left: 75 76, on right: 74 76
equalityOperator (79)
    on left: 77 78, on right: 49
relationalOperator (80)
    on left: 79 80 81 82, on right: 51
additiveOperator (81)
    on left: 83 84, on right: 53
multiplicativeOperator (82)
    on left: 85 86, on right: 55
incrementOperator (83)
    on left: 87 88, on right: 58
unaryOperator (84)
    on left: 89 90, on right: 57


state 0

    0 $accept: . program $end

    CLASS_  shift, and go to state 1

    program  go to state 2


state 1

    2 program: CLASS_ . ID_ $@1 CURLY_OPEN_ declarationList CURLY_CLOSE_

    ID_  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    2 program: CLASS_ ID_ . $@1 CURLY_OPEN_ declarationList CURLY_CLOSE_

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 program: CLASS_ ID_ $@1 . CURLY_OPEN_ declarationList CURLY_CLOSE_

    CURLY_OPEN_  shift, and go to state 6


state 6

    2 program: CLASS_ ID_ $@1 CURLY_OPEN_ . declarationList CURLY_CLOSE_

    DEF_  shift, and go to state 7
    VAR_  shift, and go to state 8

    declarationList      go to state 9
    declaration          go to state 10
    memberDeclaration    go to state 11
    functionDeclaration  go to state 12
    functionHead         go to state 13


state 7

   10 functionHead: DEF_ . ID_ $@2 PAR_OPEN_ formalParameters PAR_CLOSE_

    ID_  shift, and go to state 14


state 8

    7 memberDeclaration: VAR_ . ID_ SEMICOLON_

    ID_  shift, and go to state 15


state 9

    2 program: CLASS_ ID_ $@1 CURLY_OPEN_ declarationList . CURLY_CLOSE_
    4 declarationList: declarationList . declaration

    DEF_          shift, and go to state 7
    VAR_          shift, and go to state 8
    CURLY_CLOSE_  shift, and go to state 16

    declaration          go to state 17
    memberDeclaration    go to state 11
    functionDeclaration  go to state 12
    functionHead         go to state 13


state 10

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


state 11

    5 declaration: memberDeclaration .

    $default  reduce using rule 5 (declaration)


state 12

    6 declaration: functionDeclaration .

    $default  reduce using rule 6 (declaration)


state 13

    8 functionDeclaration: functionHead . block

    CURLY_OPEN_  shift, and go to state 18

    block  go to state 19


state 14

   10 functionHead: DEF_ ID_ . $@2 PAR_OPEN_ formalParameters PAR_CLOSE_

    $default  reduce using rule 9 ($@2)

    $@2  go to state 20


state 15

    7 memberDeclaration: VAR_ ID_ . SEMICOLON_

    SEMICOLON_  shift, and go to state 21


state 16

    2 program: CLASS_ ID_ $@1 CURLY_OPEN_ declarationList CURLY_CLOSE_ .

    $default  reduce using rule 2 (program)


state 17

    4 declarationList: declarationList declaration .

    $default  reduce using rule 4 (declarationList)


state 18

   16 block: CURLY_OPEN_ . localVariableDeclaration instructionList CURLY_CLOSE_

    $default  reduce using rule 17 (localVariableDeclaration)

    localVariableDeclaration  go to state 22


state 19

    8 functionDeclaration: functionHead block .

    $default  reduce using rule 8 (functionDeclaration)


state 20

   10 functionHead: DEF_ ID_ $@2 . PAR_OPEN_ formalParameters PAR_CLOSE_

    PAR_OPEN_  shift, and go to state 23


state 21

    7 memberDeclaration: VAR_ ID_ SEMICOLON_ .

    $default  reduce using rule 7 (memberDeclaration)


state 22

   16 block: CURLY_OPEN_ localVariableDeclaration . instructionList CURLY_CLOSE_
   18 localVariableDeclaration: localVariableDeclaration . variableDeclaration

    VAR_  shift, and go to state 24

    $default  reduce using rule 22 (instructionList)

    variableDeclaration  go to state 25
    instructionList      go to state 26


state 23

   10 functionHead: DEF_ ID_ $@2 PAR_OPEN_ . formalParameters PAR_CLOSE_

    ID_  shift, and go to state 27

    $default  reduce using rule 11 (formalParameters)

    formalParameters     go to state 28
    formalParameterList  go to state 29


state 24

   19 variableDeclaration: VAR_ . ID_ SEMICOLON_
   20                    | VAR_ . ID_ SQUARE_OPEN_ CTI_ SQUARE_CLOSE_ SEMICOLON_
   21                    | VAR_ . ID_ ASSIGN expression SEMICOLON_

    ID_  shift, and go to state 30


state 25

   18 localVariableDeclaration: localVariableDeclaration variableDeclaration .

    $default  reduce using rule 18 (localVariableDeclaration)


state 26

   16 block: CURLY_OPEN_ localVariableDeclaration instructionList . CURLY_CLOSE_
   23 instructionList: instructionList . instruction

    REAL_            shift, and go to state 31
    ID_              shift, and go to state 32
    CTI_             shift, and go to state 33
    STRING_LITERAL_  shift, and go to state 34
    NEW_             shift, and go to state 35
    SEMICOLON_       shift, and go to state 36
    CURLY_OPEN_      shift, and go to state 37
    CURLY_CLOSE_     shift, and go to state 38
    PLUS             shift, and go to state 39
    MINUS            shift, and go to state 40
    FOR              shift, and go to state 41
    IF               shift, and go to state 42
    RETURN           shift, and go to state 43
    PAR_OPEN_        shift, and go to state 44

    instruction               go to state 45
    expressionInstruction     go to state 46
    selectionInstruction      go to state 47
    iterationInstruction      go to state 48
    returnInstruction         go to state 49
    assignExpression          go to state 50
    expression                go to state 51
    equalityExpression        go to state 52
    relationalExpression      go to state 53
    additiveExpression        go to state 54
    multiplicativeExpression  go to state 55
    unaryExpression           go to state 56
    suffixExpression          go to state 57
    functionCall              go to state 58
    memberAccess              go to state 59
    unaryOperator             go to state 60


state 27

   13 formalParameterList: ID_ .
   15                    | ID_ . COMMA $@3 formalParameterList

    COMMA  shift, and go to state 61

    $default  reduce using rule 13 (formalParameterList)


state 28

   10 functionHead: DEF_ ID_ $@2 PAR_OPEN_ formalParameters . PAR_CLOSE_

    PAR_CLOSE_  shift, and go to state 62


state 29

   12 formalParameters: formalParameterList .

    $default  reduce using rule 12 (formalParameters)


state 30

   19 variableDeclaration: VAR_ ID_ . SEMICOLON_
   20                    | VAR_ ID_ . SQUARE_OPEN_ CTI_ SQUARE_CLOSE_ SEMICOLON_
   21                    | VAR_ ID_ . ASSIGN expression SEMICOLON_

    SEMICOLON_    shift, and go to state 63
    SQUARE_OPEN_  shift, and go to state 64
    ASSIGN        shift, and go to state 65


state 31

   67 suffixExpression: REAL_ .

    $default  reduce using rule 67 (suffixExpression)


state 32

   44 assignExpression: ID_ . ASSIGN expression
   45                 | ID_ . POINT_ ID_ ASSIGN expression
   46                 | ID_ . SQUARE_OPEN_ expression SQUARE_CLOSE_ ASSIGN expression
   64 suffixExpression: ID_ . SQUARE_OPEN_ expression SQUARE_CLOSE_
   68 functionCall: ID_ . POINT_ ID_ PAR_OPEN_ actualParameters PAR_CLOSE_
   69             | ID_ . COLON_ ID_ PAR_OPEN_ actualParameters PAR_CLOSE_
   70             | ID_ . PAR_OPEN_ actualParameters PAR_CLOSE_
   71 memberAccess: ID_ . POINT_ ID_
   72             | ID_ .

    COLON_        shift, and go to state 66
    SQUARE_OPEN_  shift, and go to state 67
    ASSIGN        shift, and go to state 68
    POINT_        shift, and go to state 69
    PAR_OPEN_     shift, and go to state 70

    $default  reduce using rule 72 (memberAccess)


state 33

   65 suffixExpression: CTI_ .

    $default  reduce using rule 65 (suffixExpression)


state 34

   66 suffixExpression: STRING_LITERAL_ .

    $default  reduce using rule 66 (suffixExpression)


state 35

   61 suffixExpression: NEW_ . ID_ $@10 PAR_OPEN_ actualParameters PAR_CLOSE_

    ID_  shift, and go to state 71


state 36

   30 expressionInstruction: SEMICOLON_ .

    $default  reduce using rule 30 (expressionInstruction)


state 37

   24 instruction: CURLY_OPEN_ . localVariableDeclaration instructionList CURLY_CLOSE_

    $default  reduce using rule 17 (localVariableDeclaration)

    localVariableDeclaration  go to state 72


state 38

   16 block: CURLY_OPEN_ localVariableDeclaration instructionList CURLY_CLOSE_ .

    $default  reduce using rule 16 (block)


state 39

   89 unaryOperator: PLUS .

    $default  reduce using rule 89 (unaryOperator)


state 40

   90 unaryOperator: MINUS .

    $default  reduce using rule 90 (unaryOperator)


state 41

   39 iterationInstruction: FOR . PAR_OPEN_ optionalExpression SEMICOLON_ @6 expression @7 SEMICOLON_ @8 optionalExpression $@9 PAR_CLOSE_ instruction

    PAR_OPEN_  shift, and go to state 73


state 42

   34 selectionInstruction: IF . PAR_OPEN_ expression PAR_CLOSE_ @4 instruction @5 ELSE instruction

    PAR_OPEN_  shift, and go to state 74


state 43

   42 returnInstruction: RETURN . expression SEMICOLON_
   43                  | RETURN . SEMICOLON_

    REAL_            shift, and go to state 31
    ID_              shift, and go to state 75
    CTI_             shift, and go to state 33
    STRING_LITERAL_  shift, and go to state 34
    NEW_             shift, and go to state 35
    SEMICOLON_       shift, and go to state 76
    PLUS             shift, and go to state 39
    MINUS            shift, and go to state 40
    PAR_OPEN_        shift, and go to state 44

    expression                go to state 77
    equalityExpression        go to state 52
    relationalExpression      go to state 53
    additiveExpression        go to state 54
    multiplicativeExpression  go to state 55
    unaryExpression           go to state 56
    suffixExpression          go to state 57
    functionCall              go to state 58
    memberAccess              go to state 59
    unaryOperator             go to state 60


state 44

   59 suffixExpression: PAR_OPEN_ . expression PAR_CLOSE_

    REAL_            shift, and go to state 31
    ID_              shift, and go to state 75
    CTI_             shift, and go to state 33
    STRING_LITERAL_  shift, and go to state 34
    NEW_             shift, and go to state 35
    PLUS             shift, and go to state 39
    MINUS            shift, and go to state 40
    PAR_OPEN_        shift, and go to state 44

    expression                go to state 78
    equalityExpression        go to state 52
    relationalExpression      go to state 53
    additiveExpression        go to state 54
    multiplicativeExpression  go to state 55
    unaryExpression           go to state 56
    suffixExpression          go to state 57
    functionCall              go to state 58
    memberAccess              go to state 59
    unaryOperator             go to state 60


state 45

   23 instructionList: instructionList instruction .

    $default  reduce using rule 23 (instructionList)


state 46

   25 instruction: expressionInstruction .

    $default  reduce using rule 25 (instruction)


state 47

   27 instruction: selectionInstruction .

    $default  reduce using rule 27 (instruction)


state 48

   28 instruction: iterationInstruction .

    $default  reduce using rule 28 (instruction)


state 49

   29 instruction: returnInstruction .

    $default  reduce using rule 29 (instruction)


state 50

   26 instruction: assignExpression .

    $default  reduce using rule 26 (instruction)


state 51

   31 expressionInstruction: expression . SEMICOLON_

    SEMICOLON_  shift, and go to state 79


state 52

   47 expression: equalityExpression .
   49 equalityExpression: equalityExpression . equalityOperator relationalExpression

    EQUAL      shift, and go to state 80
    NOT_EQUAL  shift, and go to state 81

    $default  reduce using rule 47 (expression)

    equalityOperator  go to state 82


state 53

   48 equalityExpression: relationalExpression .
   51 relationalExpression: relationalExpression . relationalOperator additiveExpression

    GREATER        shift, and go to state 83
    LESS           shift, and go to state 84
    GREATER_EQUAL  shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86

    $default  reduce using rule 48 (equalityExpression)

    relationalOperator  go to state 87


state 54

   50 relationalExpression: additiveExpression .
   53 additiveExpression: additiveExpression . additiveOperator multiplicativeExpression

    PLUS   shift, and go to state 88
    MINUS  shift, and go to state 89

    PLUS      [reduce using rule 50 (relationalExpression)]
    MINUS     [reduce using rule 50 (relationalExpression)]
    $default  reduce using rule 50 (relationalExpression)

    additiveOperator  go to state 90


state 55

   52 additiveExpression: multiplicativeExpression .
   55 multiplicativeExpression: multiplicativeExpression . multiplicativeOperator unaryExpression

    MULT  shift, and go to state 91
    DIV_  shift, and go to state 92

    $default  reduce using rule 52 (additiveExpression)

    multiplicativeOperator  go to state 93


state 56

   54 multiplicativeExpression: unaryExpression .

    $default  reduce using rule 54 (multiplicativeExpression)


state 57

   56 unaryExpression: suffixExpression .

    $default  reduce using rule 56 (unaryExpression)


state 58

   62 suffixExpression: functionCall .

    $default  reduce using rule 62 (suffixExpression)


state 59

   58 suffixExpression: memberAccess . incrementOperator
   63                 | memberAccess .

    INC_  shift, and go to state 94
    DEC_  shift, and go to state 95

    $default  reduce using rule 63 (suffixExpression)

    incrementOperator  go to state 96


state 60

   57 unaryExpression: unaryOperator . unaryExpression

    REAL_            shift, and go to state 31
    ID_              shift, and go to state 75
    CTI_             shift, and go to state 33
    STRING_LITERAL_  shift, and go to state 34
    NEW_             shift, and go to state 35
    PLUS             shift, and go to state 39
    MINUS            shift, and go to state 40
    PAR_OPEN_        shift, and go to state 44
